# third1

./: .gitignore  .gitmodules
appseed/: w_ax.vcxproj
appseed/aaa_want_to_remove_old_jpeg/: LibJPEG.2008.vcxproj.filters
appseed/aaa_want_to_remove_openh264/: WelsCommon.cbp  WelsDecoder.cbp  WelsEncoder.cbp  WelsProcessing.cbp  nord_WelsDecCore.vcxproj  nord_WelsDecCore.vcxproj.filters  nord_WelsDecPlus.vcxproj  nord_WelsDecPlus.vcxproj.filters  nord_WelsEncCore.vcxproj  nord_WelsEncCore.vcxproj.filters  nord_WelsEncPlus.vcxproj  nord_WelsVP.vcxproj  nord_WelsVP.vcxproj.filters  nord_welscommon.vcxproj
appseed/bzip2/: and_axisbzip2.vcxproj.filters  axisbzip2.cbp  axisbzip2.vcxproj  axisbzip2.vcxproj.filters  bzip2_static.vcxproj  bzlib.c  bzlib_private.h  m_axisbzip2.vcxproj  nord_axisbzip2.vcxproj  w_axisbzip2.vcxproj  w_axisbzip2.vcxproj.filters
appseed/cairo/: and_axiscairo.vcxproj  axiscairo.cbp  axiscairo.vcxproj  axiscairo.vcxproj.filters  cairo.def  config.h  nord_axiscairo.vcxproj  nord_axiscairo.vcxproj.filters
appseed/charguess/: framework.h
appseed/clientchannels/: axisclientchannels.cbp  axisclientchannels.def  axisclientchannels.layout  axisclientchannels.vcxproj  axisclientchannels.vcxproj.filters  config.h  m_axisclientchannels.vcxproj  nord_axisclientchannels.vcxproj  nord_axisclientchannels.vcxproj.filters  w_axisclientchannels.vcxproj  w_axisclientchannels.vcxproj.filters
appseed/crypto/: and_axiscrypto.vcxproj  axiscrypto.cbp  axiscrypto.vcxproj  axiscrypto.vcxproj.filters  crypto - Copy.def  crypto.def  crypto_.def  e_os.h  m_axiscrypto.def  m_axiscrypto.vcxproj  m_axiscrypto.vcxproj.filters  nord_axiscrypto.vcxproj  nord_axiscrypto.vcxproj.filters  openssl_exception.cpp  (+2 more)
obs-studio/ca2plugin/: CMakeLists.txt  audio_render.c  ca2plugin-main.cpp  ca2plugin.c  linux.c  win32.c  xcomposite-main.cpp
obs-studio/ca2plugin/data/locale/: el-GR.ini  en-US.ini  ko-KR.ini
obs-studio/ca2plugin1/: CMakeLists.txt  ca2plugin.c
(+3322 files in other folders)
